--- a/.gitignore
+++ b/.gitignore
@@ -160,3 +160,14 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+/tmp
+passenger_wsgi.py 
+.venv 
+/static_media
+static_media
+/static_files
+static_files 
+mydatabase
+file_name.sql
+__pycache__ 
+__pycache__/
